RESOLVED FIXED280949
REGRESSION(284744@main) Undefined symbol Inspector::BackendDispatcher::sendPendingErrors
https://bugs.webkit.org/show_bug.cgi?id=280949
Summary REGRESSION(284744@main) Undefined symbol Inspector::BackendDispatcher::sendPe...
Matt Woodrow
Reported 2024-10-06 17:49:44 PDT
Attachments
Matt Woodrow
Comment 1 2024-10-06 17:53:22 PDT
EWS
Comment 2 2024-10-06 17:56:10 PDT
Committed 284746@main (9b9fef04e49d): <https://commits.webkit.org/284746@main> Reviewed commits have been landed. Closing PR #34748 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.