REGRESSION(284744@main) Undefined symbol Inspector::BackendDispatcher::sendPendingErrors. https://bugs.webkit.org/show_bug.cgi?id=280949 <rdar://137392685>

Unreviewed build fix.

* Source/JavaScriptCore/inspector/InspectorBackendDispatcher.h:

Canonical link: https://commits.webkit.org/284746@main